<resources>
    <string name="app_name">FireBaseCURDApp</string>
    <string name="tagLogout">logout</string>

    <string name="tagUserName">userName</string>
    <string name="tagUserMobile">userMobile</string>
    <string name="tagUserEmail">userEmail</string>
    <string name="tagUserPassword">userPassword</string>
    <string name="tagUserTable">user_details</string>

    <string name="action_save">Create User</string>
    <string name="action_update">Update User</string>
    <string name="action_add_user">Add User</string>
    <string name="alertActionYes">Yes</string>
    <string name="alertActionNo">No</string>

    <string name="tagHeadingAdd">Add User Details</string>
    <string name="tagHeadingUpdate">Update User Details</string>

    <string name="tagHintUserName">Enter user name</string>
    <string name="tagHintUserMobile">Enter user mobile</string>
    <string name="tagHintUserEmail">Enter user Email</string>
    <string name="tagHintPassword">Enter password</string>

    <string name="tagNoUserMsg">User not available.</string>

    <!--Success and error message-->
    <string name="tagUserAddedMsg">User added successfully</string>
    <string name="tagUserUpdateMsg">User updated successfully</string>
    <string name="tagUserDeleteMsg">User deleted successfully</string>
    <string name="emptyString">You missed this one!</string>
    <string name="errorValidMobile">A 10-digit number please!</string>
    <string name="errorInvalidEmail">This email address is invalid</string>
    <string name="errorPassLength">you have to enter at least 6 digit!</string>
    <string name="alertMsg">Are you sure you want to delete this user?</string>

</resources>
