<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="7dp"
    android:layout_marginLeft="1dp"
    app:cardCornerRadius="4dp"
    android:layout_marginRight="1dp"
    android:layout_marginTop="1dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:text="@string/tagUserName"
                    android:singleLine="true"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/txtUserMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:typeface="sans"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:textColor="@android:color/black"
                    android:text="@string/tagUserMobile"

                    />
                <TextView
                    android:id="@+id/txtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:typeface="sans"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:textColor="@android:color/black"
                    android:text="@string/tagUserEmail"

                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray"></View>

            <LinearLayout
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                  <ImageView
                    android:id="@+id/imgEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_mode_edit_black_24dp"/>

                <ImageView
                    android:id="@+id/imgDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_delete_forever_black_24dp"/>


            </LinearLayout>

        </LinearLayout>
</android.support.v7.widget.CardView>

